--- a/Python_essetials.ipynb
+++ b/Python_essetials.ipynb
@@ -1034,7 +1034,7 @@
         },
         "outputId": "9839db4b-a3fe-4d14-eb80-b87efc7c1b21"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,7 +1078,7 @@
         "id": "_3CS8fjJxhLt",
         "outputId": "5824347a-5e45-48a8-d970-07ca8d96e5f9"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1092,12 +1092,253 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**SNAKE-WATER-GUN**"
+      ],
+      "metadata": {
+        "id": "FPO8BYfi16qW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random as rd\n",
+        "count=0\n",
+        "q=\"nothing\"\n",
+        "w=\"snake won\"\n",
+        "e=\"water won\"\n",
+        "r= \"Gun won\"\n",
+        "t=\"you won\"\n",
+        "y=\"computer won\"\n",
+        "\n",
+        "c1 = 0 \n",
+        "c2=0\n",
+        "c3=0\n",
+        "c4=0\n",
+        "c5=0\n",
+        "c6=0\n",
+        "while(count <10):\n",
+        "  lst=[\"S\",\"G\",\"W\"]\n",
+        "  print (\"Enter your %s choice S/W/G\"%(count+1))\n",
+        "  inp=input()\n",
+        "  ele = rd.choice(lst)\n",
+        "  if (inp == 'S'):\n",
+        "    count=count+1\n",
+        "    if (ele == 'S'):\n",
+        "      print(q)\n",
+        "      c1=c1+1\n",
+        "      #c6=c6+1#comp won \n",
+        "      #print(y)\n",
+        "    elif (ele == 'G'):\n",
+        "      print(r)\n",
+        "      c2=c2+1\n",
+        "      c6=c6+1\n",
+        "      print(y)\n",
+        "    elif (ele == 'W'):\n",
+        "      print(w)\n",
+        "      c3=c3+1\n",
+        "      c5=c5+1 #input won\n",
+        "      print(t) \n",
+        "  if (inp == 'W'):\n",
+        "    count=count+1\n",
+        "    if (ele == 'S'):\n",
+        "      print(w)\n",
+        "      c3=c3+1\n",
+        "      c6=c6+1\n",
+        "      print(y)\n",
+        "    elif (ele == 'G'):\n",
+        "      print(e)\n",
+        "      c4=c4+1\n",
+        "      c5=c5+1 #input won\n",
+        "      print(t)\n",
+        "    elif (ele == 'W'):\n",
+        "      print(q)\n",
+        "      c1=c1+1\n",
+        "      #c6=c6+1\n",
+        "      #print(y)\n",
+        "  if (inp == 'G'):\n",
+        "    count=count+1\n",
+        "    if (ele == 'S'):\n",
+        "      print(r)\n",
+        "      c2=c2+1\n",
+        "      c5=c5+1\n",
+        "      print(t)\n",
+        "    elif (ele == 'G'):\n",
+        "      print(q)\n",
+        "      c1=c1+1\n",
+        "      #c6=c6+1\n",
+        "      #print(y)\n",
+        "    elif (ele == 'W'):\n",
+        "      print(e)\n",
+        "      c4=c4+1\n",
+        "      c6=c6+1\n",
+        "      print(y)\n",
+        "if (c5>c6):\n",
+        "  print(\"Final result :you won\")\n",
+        "else:\n",
+        "  print(\"Final result :computer won\")\n",
+        "#c1=0,c2=0,c3=0,c4=0,c5=0,c6=0\n"
+      ],
+      "metadata": {
+        "id": "CB-Y0nsBzgR4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**!! args and kwargs !!**"
+      ],
+      "metadata": {
+        "id": "ByjBYPN9nFig"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# normal arguments ko pahle , phir args , phir kwargs \n",
+        "# args is used for list ,kwargs is used for dicionary\n",
+        "def func(*args):\n",
+        "  for i in range(len(args)):\n",
+        "    print (f\"the value of {i+1} is {args[i]}\")\n",
+        "    print(args)\n",
+        "  print(len(args))\n",
+        "  \n",
+        "args=[]\n",
+        "for i in range(10):\n",
+        "  args.append(i)\n",
+        "func(args)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hc5ej1NE-M0S",
+        "outputId": "3ee3f79a-7a8e-4783-f0e7-e2d87b1abbcc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the value of 1 is [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+            "([0, 1, 2, 3, 4, 5, 6, 7, 8, 9],)\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**TIME MODULE**"
+      ],
+      "metadata": {
+        "id": "Z-R5MuVos5LQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time \n",
+        "initial = time.time() #pahle declare kro time phir baad me (loop ke baad ) jo bhi time aaya hai usse minus krdo \n",
+        "i=0\n",
+        "while(i<20):\n",
+        "   print(\"My name is Ekagra Varma\")\n",
+        "   i=i+1\n",
+        "print(\"the time for while loop is \",(time.time()-initial))\n",
+        " \n",
+        " ####################################\n",
+        "\n",
+        "initial2=time.time()\n",
+        "for i in range(20):\n",
+        "  print(\"My name is \\t\")\n",
+        "  time.sleep(2)\n",
+        "print(f\"{time.time()-initial2}\")\n",
+        "\n",
+        "################### Exact time ##########\n",
+        "\n",
+        "print(time.asctime(time.localtime(time.time())))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_fBbo-_3lAD2",
+        "outputId": "f7fb2f5f-31ee-42d6-ba73-508d7c9be8cf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "My name is Ekagra Varma\n",
+            "the time for while loop is  0.005493640899658203\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "My name is \t\n",
+            "40.03982639312744\n",
+            "Thu Mar 17 16:43:49 2022\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "vUR-CsPtxTJ7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "CB-Y0nsBzgR4"
+        "id": "CgygasXEs4cK"
       },
       "execution_count": null,
       "outputs": []
@@ -1107,7 +1348,7 @@
     "colab": {
       "name": "Python essetials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNHmYuYoiITp+UcNiGJaWLG",
+      "authorship_tag": "ABX9TyPxnMwlOt+ocZ9FUpyQd2bF",
       "include_colab_link": true
     },
     "kernelspec": {
